--- a/vetores_ordenados/main.ipynb
+++ b/vetores_ordenados/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class VetorNaoOrdenado:\n",
+    "class VetorOrdenado:\n",
     "\n",
     "    def __init__(self, capacidade):\n",
     "        self.capcidade = capacidade\n",
@@ -31,23 +31,39 @@
     "                print(i, ' - ', self.valores[i])\n",
     "    \n",
     "\n",
-    "    def insere(self, valor):\n",
-    "        if self.ultima_posicao == self.capcidade - 1:\n",
-    "            print('Capacidade atingida')\n",
-    "        else:\n",
-    "            self.ultima_posicao += 1\n",
-    "            self.valores[self.ultima_posicao] = valor\n",
+    "    def inseri(self, valor):\n",
+    "        if(self.ultima_posicao == self.capcidade - 1):\n",
+    "            print(\"Capacidade atingida\")\n",
+    "            return\n",
+    "        \n",
+    "        posicao = 0\n",
+    "        for i in range(self.ultima_posicao + 1):\n",
+    "            posicao = i\n",
+    "            if self.valores[i] > valor:\n",
+    "                break\n",
+    "            if i == self.ultima_posicao:\n",
+    "                posicao = i + 1\n",
+    "        x = self.ultima_posicao\n",
+    "        while x >= posicao:\n",
+    "            self.valores[x + 1] = self.valores[x]\n",
+    "            x -= 1\n",
+    "        \n",
+    "        self.valores[posicao] = valor\n",
+    "        self.ultima_posicao += 1\n",
+    "    \n",
+    "    \n",
+    "    def pesquisa(self, valor):\n",
+    "        for i in range(self.ultima_posicao + 1):\n",
+    "            if self.valores[i] > valor:\n",
+    "                return -1\n",
+    "            if self.valores[i] == valor:\n",
+    "                return i\n",
+    "            if i == self.ultima_posicao:\n",
+    "                return -1\n",
     "    \n",
     "\n",
-    "    def pesquisar(self, valor):\n",
-    "        for i in range(self.ultima_posicao + 1):\n",
-    "            if valor == self.valores[i]:\n",
-    "                return i\n",
-    "        return -1\n",
-    "    \n",
-    " \n",
     "    def remover(self, valor):\n",
-    "        posicao = self.pesquisar(valor)\n",
+    "        posicao = self.pesquisa(valor)\n",
     "        if posicao == -1:\n",
     "            return -1\n",
     "        else:\n",
@@ -58,27 +74,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  -  5\n"
+     ]
+    }
+   ],
    "source": [
-    "vetor = VetorNaoOrdenado(5)"
+    "elemento = VetorOrdenado(5)\n",
+    "elemento.inseri(5)\n",
+    "elemento.imprime()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vetor.insere(4)\n",
-    "vetor.insere(8)\n",
-    "vetor.insere(9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -86,53 +101,75 @@
      "output_type": "stream",
      "text": [
       "0  -  4\n",
-      "1  -  8\n",
-      "2  -  9\n"
+      "1  -  5\n"
      ]
     }
    ],
    "source": [
-    "vetor.imprime()"
+    "elemento.inseri(4)\n",
+    "elemento.imprime()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  -  4\n",
+      "1  -  5\n",
+      "2  -  6\n"
+     ]
+    }
+   ],
+   "source": [
+    "elemento.inseri(6)\n",
+    "elemento.imprime()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  -  3\n",
+      "1  -  3\n",
+      "2  -  4\n",
+      "3  -  5\n",
+      "4  -  6\n"
+     ]
+    }
+   ],
+   "source": [
+    "elemento.inseri(3)\n",
+    "elemento.imprime()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1"
+       "4"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vetor.pesquisar(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-1"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vetor.remover(3)"
+    "elemento.pesquisa(6)"
    ]
   }
  ],
